--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ e<!DOCTYPE HTML>
 -->
 <html>
 	<head>
-		<title>Waidiney Junior</title>
+		<title>Waidiney Junior/New Dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
