--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ e<!DOCTYPE HTML>
 				<h1>Big Picture</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Intro</a></li>
+						<li><a href="#intro">Introdução</a></li>
 						<li><a href="#one">What I Do</a></li>
 						<li><a href="#two">Who I Am</a></li>
 						<li><a href="#work">My Work</a></li>
