--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ e<!DOCTYPE HTML>
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Waidiney Junior</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Introdução</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#one">O que eu faço?</a></li>
+						<li><a href="#two">quem eu sou?</a></li>
+						<li><a href="#work">Meus trabalhos</a></li>
+						<li><a href="#contact">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
