--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ e<!DOCTYPE HTML>
 				<nav>
 					<ul>
 						<li><a href="#intro">Introdução</a></li>
-						<li><a href="#one">O que eu faço?</a></li>
-						<li><a href="#two">quem eu sou?</a></li>
-						<li><a href="#work">Meus trabalhos</a></li>
-						<li><a href="#contact">Contato</a></li>
+						<li><a href="#o-que-faco">O que eu faço?</a></li>
+						<li><a href="#quem-sou">quem eu sou?</a></li>
+						<li><a href="#trabalhos">Meus trabalhos</a></li>
+						<li><a href="#contatos">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
