--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ e<!DOCTYPE HTML>
 				<nav>
 					<ul>
 						<li><a href="#intro">Introdução</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#one">O que eu faço</a></li>
+						<li><a href="#two">Quem eu sou</a></li>
+						<li><a href="#work">Meus trabalhos</a></li>
+						<li><a href="#contact">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
