--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ e<!DOCTYPE HTML>
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Prática de GitHub </h1>
 				<nav>
 					<ul>
 						<li><a href="#introducao">Introdução</a></li>
