--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@ e<!DOCTYPE HTML>
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>Waidiney Junior</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Me chamo Waidiney tenho 34 anos sou  de são Luís Maranhão, e sou o rei dos peixes bettas.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
