--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ e<!DOCTYPE HTML>
 					<header>
 						<h2>Waidiney Junior</h2>
 					</header>
-					<p>Me chamo Waidiney tenho 34 anos sou  de são Luís Maranhão, e sou o rei dos peixes bettas.</p>
+					<p>Me chamo Waidiney tenho 34 anos, casado.Sou  de são Luís Maranhão, e sou o rei dos peixes bettas.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
